--- a/src/Project/Habitat/code/Views/Website/Layouts/Default.cshtml
+++ b/src/Project/Habitat/code/Views/Website/Layouts/Default.cshtml
@@ -28,6 +28,7 @@
 </head>
 <body class="header-static @(Sitecore.Context.PageMode.IsNormal ? "" : (Sitecore.Context.PageMode.IsExperienceEditor ? "pagemode-edit" : "pagemode-preview"))">
   <div id="main-container">
+    Hello SUGCON!
     <header class="header-static">
       @Html.Sitecore().Placeholder("header-top")
 
